--- a/src/i18n/locales/es/translation.json
+++ b/src/i18n/locales/es/translation.json
@@ -565,5 +565,162 @@
     "liked": "Gustado",
     "like_story": "Me Gusta la Historia",
     "share_story": "Compartir Historia"
+  },
+  "events": {
+    "section_badge": "🎾 Próximos Eventos",
+    "hero_title_line1": "Únete a Nuestros",
+    "hero_title_line2": "Eventos Emocionantes",
+    "hero_description": "Descubre torneos, campamentos, talleres y eventos sociales en la Academia de Tenis KUZO. ¡Hay algo para cada entusiasta del tenis!",
+    "category_all": "Todos los Eventos",
+    "category_tournaments": "Torneos",
+    "category_camps": "Campamentos",
+    "category_sessions": "Sesiones",
+    "category_workshops": "Talleres",
+    "category_special_events": "Eventos Especiales",
+    "junior_championship_title": "Torneo del Campeonato Juvenil",
+    "time_format": "09:00 AM - 5:00 PM",
+    "kuzo_courts": "Canchas de Tenis KUZO",
+    "junior_championship_description": "Torneo de campeonato anual para jugadores juveniles. Abierto a todos los niveles de habilidad.",
+    "ages_8_18": "Edades 8-18",
+    "adult_open_play_title": "Sesión de Juego Abierto para Adultos",
+    "evening_time": "7:00 PM - 9:00 PM",
+    "adult_open_play_description": "Sesión de juego abierto para jugadores adultos. Trae a tus amigos y disfruta de partidos amistosos.",
+    "ages_18_plus": "Edades 18+",
+    "summer_camp_title": "Campamento de Tenis de Verano",
+    "full_day_time": "9:00 AM - 4:00 PM",
+    "kuzo_academy": "Academia de Tenis KUZO",
+    "summer_camp_description": "Campamento intensivo de una semana para jugadores principiantes e intermedios. Incluye almuerzo y todo el equipo.",
+    "ages_6_16": "Edades 6-16",
+    "coaches_workshop_title": "Taller de Entrenamiento para Entrenadores",
+    "workshop_time": "10:00 AM - 3:00 PM",
+    "training_center": "Centro de Entrenamiento KUZO",
+    "coaches_workshop_description": "Taller de desarrollo profesional para entrenadores de tenis. Se proporciona certificación.",
+    "coaches_instructors": "Entrenadores e Instructores",
+    "family_fun_day_title": "Día Familiar Divertido",
+    "afternoon_time": "11:00 AM - 4:00 PM",
+    "family_fun_day_description": "Un día de actividades divertidas para toda la familia. Incluye mini torneos, clínicas y camiones de comida.",
+    "all_ages": "Todas las Edades",
+    "senior_players_title": "Encuentro de Jugadores Mayores",
+    "senior_players_description": "Sesión de juego social para jugadores mayores. Enfocado en la diversión y el fitness.",
+    "ages_50_plus": "Edades 50+",
+    "register_now": "Regístrate Ahora"
+  },
+  "facilities": {
+    "section_badge": "🏆 Instalaciones de Clase Mundial",
+    "hero_title_line1": "Experimenta Nuestras",
+    "hero_title_line2": "Instalaciones Premium",
+    "hero_description": "Descubre nuestras instalaciones de tenis de vanguardia diseñadas para proporcionar el entorno perfecto para entrenamiento, competencia y relajación.",
+    "category_all": "Todas las Instalaciones",
+    "category_courts": "Canchas de Tenis",
+    "category_training": "Áreas de Entrenamiento",
+    "category_amenities": "Comodidades",
+    "category_support": "Servicios de Soporte",
+    "clay_courts_name": "Canchas de Tierra Batida Campeonato",
+    "clay_courts_description": "Nuestras canchas premium de tierra batida se mantienen según los estándares profesionales de torneo con rodado y riego diario.",
+    "feature_professional_grade": "Grado Profesional",
+    "feature_daily_maintenance": "Mantenimiento Diario",
+    "feature_night_lighting": "Iluminación Nocturna",
+    "feature_court_heating": "Calefacción de Cancha",
+    "capacity_4_courts": "4 canchas",
+    "surface_clay": "Tierra Roja",
+    "status_available": "Disponible",
+    "hard_courts_name": "Complejo de Canchas Duras",
+    "hard_courts_description": "Nuestras canchas duras cuentan con superficies acrílicas premium con excelente rebote de pelota y seguridad para el jugador.",
+    "feature_acrylic_surface": "Superficie Acrílica",
+    "feature_cushioned_base": "Base Acolchada",
+    "feature_spectator_seating": "Asientos para Espectadores",
+    "capacity_6_courts": "6 canchas",
+    "surface_acrylic": "Acrílico",
+    "indoor_courts_name": "Instalación de Canchas Cubiertas",
+    "indoor_courts_description": "Canchas cubiertas con control climático y superficies premium, perfectas para entrenamiento todo el año.",
+    "feature_climate_control": "Control Climático",
+    "feature_heating_cooling": "Calefacción/Refrigeración",
+    "feature_sound_system": "Sistema de Sonido",
+    "capacity_2_courts": "2 canchas",
+    "surface_hard_court": "Cancha Dura",
+    "biomechanics_lab_name": "Laboratorio de Análisis Biomecánico",
+    "biomechanics_lab_description": "Tecnología de captura de movimiento de vanguardia para analizar y mejorar tu técnica.",
+    "feature_3d_motion_capture": "Captura de Movimiento 3D",
+    "feature_video_analysis": "Análisis de Video",
+    "feature_performance_metrics": "Métricas de Rendimiento",
+    "feature_coach_feedback": "Retroalimentación del Entrenador",
+    "capacity_private_sessions": "Sesiones Privadas",
+    "surface_technology": "Tecnología",
+    "fitness_center_name": "Centro de Fitness y Acondicionamiento",
+    "fitness_center_description": "Gimnasio completamente equipado con equipos de entrenamiento específicos para tenis y entrenadores profesionales.",
+    "feature_strength_training": "Entrenamiento de Fuerza",
+    "feature_cardio_equipment": "Equipos Cardiovasculares",
+    "feature_tennis_machines": "Máquinas de Tenis",
+    "feature_personal_trainers": "Entrenadores Personales",
+    "capacity_20_stations": "20+ Estaciones",
+    "surface_gym_floor": "Piso de Gimnasio",
+    "video_analysis_name": "Suite de Análisis de Video",
+    "video_analysis_description": "Herramientas profesionales de análisis de video para revisar y mejorar tu juego y técnica.",
+    "feature_high_speed_cameras": "Cámaras de Alta Velocidad",
+    "feature_playback_software": "Software de Reproducción",
+    "feature_coach_analysis": "Análisis del Entrenador",
+    "feature_performance_reports": "Reportes de Rendimiento",
+    "capacity_individual_sessions": "Sesiones Individuales",
+    "player_lounge_name": "Salón del Jugador",
+    "player_lounge_description": "Área de relajación cómoda con comodidades premium para jugadores y familias.",
+    "feature_comfort_seating": "Asientos Cómodos",
+    "feature_wifi": "Wi-Fi",
+    "feature_refreshments": "Refrescos",
+    "feature_tv_entertainment": "TV/Entretenimiento",
+    "capacity_50_seating": "50+ Asientos",
+    "surface_furnished": "Amueblado",
+    "pro_shop_name": "Tienda Profesional y Equipamiento",
+    "pro_shop_description": "Tienda de servicio completo con equipos, ropa y accesorios premium.",
+    "feature_racket_demo": "Demostración de Raquetas",
+    "feature_stringing_service": "Servicio de Encordado",
+    "feature_apparel": "Ropa",
+    "feature_equipment_sales": "Venta de Equipos",
+    "capacity_full_service": "Servicio Completo",
+    "surface_retail": "Venta al por menor",
+    "nutrition_bar_name": "Bar de Nutrición y Café",
+    "nutrition_bar_description": "Opciones de comidas saludables y nutrición para el rendimiento para atletas y familias.",
+    "feature_healthy_options": "Opciones Saludables",
+    "feature_performance_nutrition": "Nutrición para el Rendimiento",
+    "feature_smoothies": "Batidos",
+    "feature_grab_go": "Para Llevar",
+    "capacity_30_seating": "30+ Asientos",
+    "surface_dining": "Comedor",
+    "locker_rooms_name": "Vestidores y Duchas",
+    "locker_rooms_description": "Instalaciones modernas de vestidores con comodidades premium para todos los miembros de la academia.",
+    "feature_private_lockers": "Casilleros Privados",
+    "feature_showers": "Duchas",
+    "feature_towels": "Toallas",
+    "feature_toiletries": "Artículos de Aseo",
+    "capacity_100_lockers": "100+ Casilleros",
+    "surface_tile": "Azulejo",
+    "medical_center_name": "Centro Médico y de Bienestar",
+    "medical_center_description": "Profesionales médicos en el sitio para prevención y tratamiento de lesiones.",
+    "feature_physical_therapy": "Fisioterapia",
+    "feature_injury_assessment": "Evaluación de Lesiones",
+    "feature_first_aid": "Primeros Auxilios",
+    "feature_wellness_programs": "Programas de Bienestar",
+    "capacity_private_appointments": "Citas Privadas",
+    "surface_medical": "Médico",
+    "event_spaces_name": "Espacios para Eventos y Reuniones",
+    "event_spaces_description": "Espacios premium para torneos, reuniones y eventos especiales.",
+    "feature_conference_rooms": "Salas de Conferencia",
+    "feature_event_space": "Espacio para Eventos",
+    "feature_catering": "Catering",
+    "feature_audio_visual": "Audio/Visual",
+    "capacity_200_capacity": "Capacidad de 200+",
+    "surface_event_floor": "Piso de Eventos",
+    "interactive_badge": "📷 Experiencia Interactiva",
+    "interactive_title": "Tour Virtual de Instalaciones",
+    "interactive_description": "Explora nuestras instalaciones a través de este ejemplo de cámara 3D interactiva",
+    "explore_title": "Explora Nuestras Instalaciones",
+    "explore_description": "Descubre nuestras comodidades de clase mundial diseñadas para mejorar tu experiencia en el tenis",
+    "features_title": "Características Clave:",
+    "stats_facilities": "Instalaciones",
+    "stats_courts": "Canchas de Tenis",
+    "stats_capacity": "Capacidad de Personas",
+    "stats_access": "Acceso",
+    "details_title": "Detalles de la Instalación",
+    "book_tour": "Reservar Tour de Instalaciones",
+    "contact_staff": "Contactar al Personal"
   }
 }
