--- a/src/i18n/locales/fr/translation.json
+++ b/src/i18n/locales/fr/translation.json
@@ -250,5 +250,162 @@
     "target": "🎯",
     "calendar": "📅",
     "stadium": "🏟️"
+  },
+  "events": {
+    "section_badge": "🎾 Événements à Venir",
+    "hero_title_line1": "Rejoignez Nos",
+    "hero_title_line2": "Événements Passionnants",
+    "hero_description": "Découvrez les tournois, camps, ateliers et événements sociaux de l'Académie de Tennis KUZO. Il y en a pour tous les amateurs de tennis !",
+    "category_all": "Tous les Événements",
+    "category_tournaments": "Tournois",
+    "category_camps": "Camps",
+    "category_sessions": "Séances",
+    "category_workshops": "Ateliers",
+    "category_special_events": "Événements Spéciaux",
+    "junior_championship_title": "Tournoi du Championnat Junior",
+    "time_format": "09h00 - 17h00",
+    "kuzo_courts": "Terrains de Tennis KUZO",
+    "junior_championship_description": "Tournoi de championnat annuel pour les joueurs juniors. Ouvert à tous les niveaux de compétence.",
+    "ages_8_18": "Âges 8-18",
+    "adult_open_play_title": "Session de Jeu Libre Adultes",
+    "evening_time": "19h00 - 21h00",
+    "adult_open_play_description": "Session de jeu libre pour les joueurs adultes. Amenez vos amis et profitez de matchs amicaux.",
+    "ages_18_plus": "18+ Ans",
+    "summer_camp_title": "Camp de Tennis d'Été",
+    "full_day_time": "9h00 - 16h00",
+    "kuzo_academy": "Académie de Tennis KUZO",
+    "summer_camp_description": "Camp intensif d'une semaine pour les joueurs débutants et intermédiaires. Inclut le déjeuner et tout l'équipement.",
+    "ages_6_16": "Âges 6-16",
+    "coaches_workshop_title": "Atelier de Formation des Entraîneurs",
+    "workshop_time": "10h00 - 15h00",
+    "training_center": "Centre d'Entraînement KUZO",
+    "coaches_workshop_description": "Atelier de développement professionnel pour les entraîneurs de tennis. Certification fournie.",
+    "coaches_instructors": "Entraîneurs et Instructeurs",
+    "family_fun_day_title": "Journée Familiale Amusante",
+    "afternoon_time": "11h00 - 16h00",
+    "family_fun_day_description": "Une journée d'activités amusantes pour toute la famille. Inclut des mini-tournois, des cliniques et des food trucks.",
+    "all_ages": "Tous Âges",
+    "senior_players_title": "Rencontre des Joueurs Séniors",
+    "senior_players_description": "Session de jeu social pour les joueurs séniors. Axée sur le plaisir et la forme physique.",
+    "ages_50_plus": "50+ Ans",
+    "register_now": "S'Inscrire Maintenant"
+  },
+  "facilities": {
+    "section_badge": "🏆 Installations de Classe Mondiale",
+    "hero_title_line1": "Découvrez Nos",
+    "hero_title_line2": "Installations Premium",
+    "hero_description": "Découvrez nos installations de tennis de pointe conçues pour offrir l'environnement parfait pour l'entraînement, la compétition et la détente.",
+    "category_all": "Toutes les Installations",
+    "category_courts": "Terrains de Tennis",
+    "category_training": "Zones d'Entraînement",
+    "category_amenities": "Commodités",
+    "category_support": "Services de Support",
+    "clay_courts_name": "Terrains de Terre Battue Championnat",
+    "clay_courts_description": "Nos terrains premium en terre battue sont entretenus selon les normes professionnelles de tournoi avec un roulage et un arrosage quotidiens.",
+    "feature_professional_grade": "Qualité Professionnelle",
+    "feature_daily_maintenance": "Entretien Quotidien",
+    "feature_night_lighting": "Éclairage Nocturne",
+    "feature_court_heating": "Chauffage du Terrain",
+    "capacity_4_courts": "4 terrains",
+    "surface_clay": "Terre Rouge",
+    "status_available": "Disponible",
+    "hard_courts_name": "Complexe de Terrains Durs",
+    "hard_courts_description": "Nos terrains durs disposent de surfaces acryliques premium avec un excellent rebond de balle et une sécurité pour le joueur.",
+    "feature_acrylic_surface": "Surface Acrilique",
+    "feature_cushioned_base": "Base Rembourrée",
+    "feature_spectator_seating": "Places pour Spectateurs",
+    "capacity_6_courts": "6 terrains",
+    "surface_acrylic": "Acrilique",
+    "indoor_courts_name": "Installation de Terrains Couverts",
+    "indoor_courts_description": "Terrains couverts avec contrôle climatique et surfaces premium, parfaits pour l'entraînement toute l'année.",
+    "feature_climate_control": "Contrôle Climatique",
+    "feature_heating_cooling": "Chauffage/Climatisation",
+    "feature_sound_system": "Système de Son",
+    "capacity_2_courts": "2 terrains",
+    "surface_hard_court": "Terrain Dur",
+    "biomechanics_lab_name": "Laboratoire d'Analyse Biomécanique",
+    "biomechanics_lab_description": "Technologie de capture de mouvement de pointe pour analyser et améliorer votre technique.",
+    "feature_3d_motion_capture": "Capture de Mouvement 3D",
+    "feature_video_analysis": "Analyse Vidéo",
+    "feature_performance_metrics": "Métriques de Performance",
+    "feature_coach_feedback": "Retour de l'Entraîneur",
+    "capacity_private_sessions": "Séances Privées",
+    "surface_technology": "Technologie",
+    "fitness_center_name": "Centre de Fitness et Conditionnement",
+    "fitness_center_description": "Gym entièrement équipé avec des équipements d'entraînement spécifiques au tennis et des entraîneurs professionnels.",
+    "feature_strength_training": "Entraînement de Force",
+    "feature_cardio_equipment": "Équipements Cardiovasculaires",
+    "feature_tennis_machines": "Machines de Tennis",
+    "feature_personal_trainers": "Entraîneurs Personnels",
+    "capacity_20_stations": "20+ Stations",
+    "surface_gym_floor": "Sol de Gymnase",
+    "video_analysis_name": "Suite d'Analyse Vidéo",
+    "video_analysis_description": "Outils d'analyse vidéo professionnels pour revoir et améliorer votre jeu et votre technique.",
+    "feature_high_speed_cameras": "Caméras Haute Vitesse",
+    "feature_playback_software": "Logiciel de Lecture",
+    "feature_coach_analysis": "Analyse de l'Entraîneur",
+    "feature_performance_reports": "Rapports de Performance",
+    "capacity_individual_sessions": "Séances Individuelles",
+    "player_lounge_name": "Salon du Joueur",
+    "player_lounge_description": "Espace de détente confortable avec des commodités premium pour les joueurs et les familles.",
+    "feature_comfort_seating": "Sièges Confortables",
+    "feature_wifi": "Wi-Fi",
+    "feature_refreshments": "Rafraîchissements",
+    "feature_tv_entertainment": "TV/Divertissement",
+    "capacity_50_seating": "50+ Places",
+    "surface_furnished": "Meublé",
+    "pro_shop_name": "Boutique Pro et Équipement",
+    "pro_shop_description": "Boutique de service complet avec équipements, vêtements et accessoires premium.",
+    "feature_racket_demo": "Démonstration de Raquettes",
+    "feature_stringing_service": "Service d'Encordage",
+    "feature_apparel": "Vêtements",
+    "feature_equipment_sales": "Vente d'Équipements",
+    "capacity_full_service": "Service Complet",
+    "surface_retail": "Vente au Détail",
+    "nutrition_bar_name": "Bar de Nutrition et Café",
+    "nutrition_bar_description": "Options de repas sains et nutrition pour la performance pour les athlètes et les familles.",
+    "feature_healthy_options": "Options Saines",
+    "feature_performance_nutrition": "Nutrition pour la Performance",
+    "feature_smoothies": "Smoothies",
+    "feature_grab_go": "À Emporter",
+    "capacity_30_seating": "30+ Places",
+    "surface_dining": "Restaurant",
+    "locker_rooms_name": "Vestiaires et Douches",
+    "locker_rooms_description": "Installations de vestiaires modernes avec des commodités premium pour tous les membres de l'académie.",
+    "feature_private_lockers": "Casiers Privés",
+    "feature_showers": "Douches",
+    "feature_towels": "Serviettes",
+    "feature_toiletries": "Articles de Toilette",
+    "capacity_100_lockers": "100+ Casiers",
+    "surface_tile": "Carrelage",
+    "medical_center_name": "Centre Médical et Bien-être",
+    "medical_center_description": "Professionnels médicaux sur place pour la prévention et le traitement des blessures.",
+    "feature_physical_therapy": "Physiothérapie",
+    "feature_injury_assessment": "Évaluation des Blessures",
+    "feature_first_aid": "Premiers Secours",
+    "feature_wellness_programs": "Programmes de Bien-être",
+    "capacity_private_appointments": "Rendez-vous Privés",
+    "surface_medical": "Médical",
+    "event_spaces_name": "Espaces pour Événements et Réunions",
+    "event_spaces_description": "Espaces premium pour les tournois, les réunions et les événements spéciaux.",
+    "feature_conference_rooms": "Salles de Conférence",
+    "feature_event_space": "Espace pour Événements",
+    "feature_catering": "Restauration",
+    "feature_audio_visual": "Audio/Visuel",
+    "capacity_200_capacity": "Capacité de 200+",
+    "surface_event_floor": "Sol d'Événements",
+    "interactive_badge": "📷 Expérience Interactive",
+    "interactive_title": "Visite Virtuelle des Installations",
+    "interactive_description": "Explorez nos installations grâce à cet exemple de caméra 3D interactive",
+    "explore_title": "Explorez Nos Installations",
+    "explore_description": "Découvrez nos commodités de classe mondiale conçues pour améliorer votre expérience de tennis",
+    "features_title": "Caractéristiques Clés :",
+    "stats_facilities": "Installations",
+    "stats_courts": "Terrains de Tennis",
+    "stats_capacity": "Capacité de Personnes",
+    "stats_access": "Accès",
+    "details_title": "Détails de l'Installation",
+    "book_tour": "Réserver une Visite des Installations",
+    "contact_staff": "Contacter le Personnel"
   }
 }
